--- a/employee-grievance-dashboard/src/Components/Employee/Employee.css
+++ b/employee-grievance-dashboard/src/Components/Employee/Employee.css
@@ -1,19 +1,78 @@
 .employees {
-  margin: 20px;
+  background-color: #f9f9f9;
+  height: 100%;
+  overflow-x: auto;
+}
+.employees h2 {
+  font-size: 25px;
+  text-align: center;
 }
 
 .employees-table {
   width: 100%;
   border-collapse: collapse;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .employees-table th,
 .employees-table td {
-  border: 1px solid #ddd;
-  padding: 8px;
+  cursor: pointer;
+  border-bottom: 1px solid #ddd;
+  padding: 12px 15px;
+  text-align: left;
+  min-width: 100px;
 }
 
 .employees-table th {
+  background-color: #007bff;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.employees-table tr:nth-child(even) {
   background-color: #f2f2f2;
-  text-align: left;
+}
+
+.employees-table tr:hover {
+  background-color: #e0e0e0;
+}
+
+.employees-table td {
+  color: #555;
+  font-size: 16px;
+}
+
+.employees-table th:first-child,
+.employees-table td:first-child {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.employees-table th:last-child,
+.employees-table td:last-child {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.employees-table button {
+  padding: 5px 10px;
+  margin: 0 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+@media screen and (max-width: 650px) {
+  td,
+  th {
+    font-size: 10px !important;
+  }
+  .employees h2 {
+    font-size: 20px;
+  }
 }
