--- a/employee-grievance-dashboard/src/Components/EmployeeDetail/EmployeeDetail.css
+++ b/employee-grievance-dashboard/src/Components/EmployeeDetail/EmployeeDetail.css
@@ -14,6 +14,7 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 700px;
   margin: 40px auto;
+  animation: slideInFromTop 1s ease-in-out;
 }
 
 .employee-detail h2 {
@@ -146,6 +147,7 @@ body {
   background-color: #555 !important;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
 }
 
@@ -218,4 +220,24 @@ body {
 
 .reject-button {
   background-color: #dc3545 !important;
+}
+
+@media screen and (max-width: 900px) {
+  .employee-detail button {
+    padding: 5px 5px;
+    font-size: 16px;
+  }
+  .approve-btns {
+    justify-content: space-between;
+  }
+  .btns-firstrow,
+  .btns-secondrow {
+    flex-direction: column;
+    justify-content: center;
+    margin: 0px auto;
+    min-width: 200px;
+    max-width: 500px;
+    margin-bottom: 20px;
+    margin-top: 16px;
+  }
 }
