--- a/employee-grievance-dashboard/src/Components/Grievances/Grievances.css
+++ b/employee-grievance-dashboard/src/Components/Grievances/Grievances.css
@@ -7,12 +7,13 @@
   border: 1px solid lightgrey;
   width: 100%;
   border-radius: 10px;
-  height: 87.5vh;
+  height: 85vh;
   overflow-y: auto;
 }
 .grievances h3 {
   text-align: center;
   font-size: 25px;
+  animation: slideInFromTop 0.8s ease-in-out;
 }
 .grievance-container {
   display: flex;
@@ -26,6 +27,7 @@
 .grievance-container::-webkit-scrollbar {
   display: none;
 }
+
 .card-container {
   font-family: "Cairo" !important;
   min-width: 284px;
@@ -42,14 +44,51 @@
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   cursor: pointer;
-  animation: slideInFromTop 0.5s ease-out forwards;
   transition: transform 0.3s ease-in;
+}
+.card-container.left {
+  animation: slideInFromLeft 1s ease-out;
+}
+
+.card-container.right {
+  animation: slideInFromRight 1s ease-out;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes slideInFromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes slideInFromRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 /* .card-container.animated {
   transition: transform 0.3s ease-in;
 } */
 .card-container.animated:hover {
-  transform: scale(1.4);
+  transform: scale(1.03);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -93,7 +132,12 @@
 }
 .grievance-title {
   font-weight: 700;
-  font-size: 24px;
+  font-size: 20.5px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .createdOn {
@@ -117,17 +161,6 @@
   height: auto;
 }
 
-@keyframes slideInFromTop {
-  0% {
-    opacity: 0;
-    transform: translateY(-100%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 .risk-legend {
   margin-left: auto;
   margin-right: auto;
@@ -138,6 +171,7 @@
   border-radius: 19px;
   margin-top: 10px;
   font-size: 16px;
+  animation: slideInFromTop 0.4s ease-in;
 }
 
 .low-l {
@@ -176,7 +210,7 @@
     font-size: 23px;
   }
   .grievance-title {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .createdOn {
@@ -190,7 +224,7 @@
 
 @media screen and (max-width: 500px) {
   .grievance-title {
-    font-size: 18px;
+    font-size: 16px;
   }
   .user-info p {
     font-size: 20px;
@@ -208,9 +242,21 @@
   display: flex;
   justify-content: center;
   gap: 1rem;
+  animation: slideInFromTop 0.6s ease-in-out;
 }
 .filters select {
   padding: 7px;
   outline: none;
+  cursor: pointer;
   border-radius: 7px;
+}
+
+.nogrievances {
+  font-size: 40px;
+  align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+  color: #888;
 }
