--- a/employee-grievance-dashboard/src/Components/EmployeeDetail/EmployeeDetail.css
+++ b/employee-grievance-dashboard/src/Components/EmployeeDetail/EmployeeDetail.css
@@ -136,7 +136,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: 0px 0px;
+  object-position: center;
   border-radius: 50%;
 }
 
