--- a/employee-grievance-dashboard/src/Components/GrievanceDetail/GrievanceDetail.css
+++ b/employee-grievance-dashboard/src/Components/GrievanceDetail/GrievanceDetail.css
@@ -14,6 +14,7 @@ h1 {
 }
 
 .grievance-detail-card {
+  z-index: 1;
   padding: 40px;
   background-color: #fff;
   border-radius: 8px;
@@ -21,6 +22,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  position: relative;
 }
 .employee-info {
   display: flex;
@@ -35,8 +37,8 @@ h1 {
   align-items: center;
 }
 
-.grievance-details-description {
-  margin-top: 30px;
+.grievance-detail-description {
+  margin-top: 10px;
 }
 .status-type {
   margin-top: 20px;
@@ -67,7 +69,7 @@ h1 {
   height: 100%;
   border-radius: 50%;
   object-fit: cover;
-  object-position: 0px 0px;
+  object-position: center;
 }
 .attached-documents {
   color: red !important;
@@ -118,6 +120,13 @@ h1 {
   margin-right: 10px;
 }
 
+.escalate {
+  background-color: var(--blue);
+}
+.resolve {
+  background-color: darkgreen;
+}
+
 .gbtn:hover {
   opacity: 0.6;
 }
@@ -138,8 +147,110 @@ h1 {
   background-color: red;
 }
 
+.grievance-detail-loader {
+  display: flex;
+  justify-content: center;
+  margin-top: 40vh;
+}
+
 .loading {
   text-align: center;
   font-size: 18px;
   color: #555;
 }
+
+.document-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 750px) {
+  .employee-info {
+    font-size: 35px;
+    gap: 3rem;
+  }
+  .employee-image {
+    width: 130px;
+    height: 130px;
+  }
+
+  .grievanceid {
+    font-size: 16px;
+  }
+  .grievance-details-title {
+    font-size: 27px;
+  }
+  .grievance-detail-description {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .employee-info {
+    gap: 1rem;
+    font-size: 25px;
+  }
+  .employee-image {
+    width: 100px;
+    height: 100px;
+  }
+  .date-solver {
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 14px;
+    align-items: flex-start;
+  }
+  .solver-div {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  .status-type {
+    font-size: 14px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.7rem;
+  }
+  .type {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
+  .document {
+    max-width: 200px;
+    font-size: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    height: auto;
+  }
+}
+
+/* .date-solver {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.grievance-details-description {
+  margin-top: 30px;
+}
+.status-type {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.grievanceid {
+  margin-top: 20px;
+  font-size: 20px;
+}
+
+.grievanceid span {
+  font-weight: 600;
+}
+
+
+} */
