--- a/employee-grievance-dashboard/src/Components/Grievances/Grievances.css
+++ b/employee-grievance-dashboard/src/Components/Grievances/Grievances.css
@@ -9,6 +9,7 @@
   border-radius: 10px;
   height: 85vh;
   overflow-y: auto;
+  background-color: #ffffff;
 }
 .grievances h3 {
   text-align: center;
@@ -127,7 +128,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: 0px 0px;
+  object-position: cover;
   border-radius: 50%;
 }
 .grievance-title {
