--- a/employee-grievance-dashboard/src/Components/Home/HomePage.css
+++ b/employee-grievance-dashboard/src/Components/Home/HomePage.css
@@ -7,6 +7,7 @@
   border-radius: 10px;
   max-height: 85vh;
   overflow-y: auto;
+  background-color: #ffffff;
 }
 
 .homepage-container::-webkit-scrollbar {
