frontend deployment build

--- a/employee-grievance-dashboard/src/Components/ProvideFeedbackPopup/ProvideFeedbackPopup.css
+++ b/employee-grievance-dashboard/src/Components/ProvideFeedbackPopup/ProvideFeedbackPopup.css
@@ -11,6 +11,10 @@
   align-items: center;
 }
 
+.Toastify__toast-container {
+  z-index: 99999999; /* Set a high value to ensure it appears above other elements */
+}
+
 .feedback-popup {
   background: white;
   padding: 20px;
