--- a/employee-grievance-dashboard/src/Components/Dashboard/Dashboard.css
+++ b/employee-grievance-dashboard/src/Components/Dashboard/Dashboard.css
@@ -71,6 +71,7 @@
   transition: transform 0.3s ease-in-out;
   max-height: 85vh;
   overflow-y: auto;
+  overflow: visible;
 }
 
 .sidebar-container::-webkit-scrollbar {
@@ -197,6 +198,7 @@ li:hover {
 /* Responsive Styles */
 @media screen and (max-width: 950px) {
   .sidebar-container {
+    z-index: 99999;
     min-width: 260px;
   }
 
@@ -205,7 +207,7 @@ li:hover {
   }
   .sidebar-container.active {
     transform: translateX(0);
-    z-index: 99;
+    z-index: 99999;
   }
   .sidebar-container li {
     font-size: 14px;
@@ -220,7 +222,7 @@ li:hover {
     font-size: 25px;
     left: 238px;
     top: 45px;
-    z-index: 99999;
+    z-index: 999999;
     background-color: rgb(0, 6, 66);
     align-items: center;
     justify-content: center; /* Show menu button on small screens */
