--- a/employee-grievance-dashboard/src/Components/GrievanceDetail/GrievanceDetail.css
+++ b/employee-grievance-dashboard/src/Components/GrievanceDetail/GrievanceDetail.css
@@ -29,6 +29,7 @@ h1 {
   align-items: center;
   gap: 4rem;
   font-size: 40px;
+  cursor: pointer;
 }
 
 .date-solver {
@@ -65,6 +66,14 @@ h1 {
   height: 180px;
 }
 .employee-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.employee-image svg {
   width: 100%;
   height: 100%;
   border-radius: 50%;
