--- a/employee-grievance-dashboard/src/Components/Grievances/Grievances.css
+++ b/employee-grievance-dashboard/src/Components/Grievances/Grievances.css
@@ -131,6 +131,14 @@
   object-position: cover;
   border-radius: 50%;
 }
+
+.grievance-user-image svg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: cover;
+  border-radius: 50%;
+}
 .grievance-title {
   font-weight: 700;
   font-size: 20.5px;
