--- a/employee-grievance-dashboard/src/Components/Grievances/Grievances.css
+++ b/employee-grievance-dashboard/src/Components/Grievances/Grievances.css
@@ -244,6 +244,14 @@
   .filters {
     flex-direction: column;
   }
+  .grievance-container {
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .grievance-description {
+    margin-top: 20px;
+  }
 }
 
 .filters {
