--- a/employee-grievance-dashboard/src/Components/GrievanceDetail/GrievanceDetail.css
+++ b/employee-grievance-dashboard/src/Components/GrievanceDetail/GrievanceDetail.css
@@ -213,7 +213,8 @@ h1 {
   .solver-div {
     display: flex;
     justify-content: space-between;
-    gap: 2rem;
+    gap: 0.6rem;
+    flex-direction: column;
   }
   .status-type {
     font-size: 14px;
@@ -223,43 +224,22 @@ h1 {
   }
   .type {
     display: flex;
-    justify-content: center;
-    gap: 2rem;
+    gap: 0.6rem;
+    flex-direction: column;
   }
   .document {
-    max-width: 200px;
+    width: 100%;
     font-size: 14px;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    height: auto;
+  }
+
+  .document-container {
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .grievance-action-buttons button {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
   }
 }
-
-/* .date-solver {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.grievance-details-description {
-  margin-top: 30px;
-}
-.status-type {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.grievanceid {
-  margin-top: 20px;
-  font-size: 20px;
-}
-
-.grievanceid span {
-  font-weight: 600;
-}
-
-
-} */
