--- a/employee-grievance-dashboard/src/Components/GrievanceDetail/GrievanceDetail.css
+++ b/employee-grievance-dashboard/src/Components/GrievanceDetail/GrievanceDetail.css
@@ -179,6 +179,9 @@ h1 {
     font-size: 35px;
     gap: 3rem;
   }
+  .employee-name {
+    font-size: 25px;
+  }
   .employee-image {
     width: 130px;
     height: 130px;
@@ -241,5 +244,17 @@ h1 {
     text-align: center;
     display: flex;
     justify-content: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .grievance-detail-container {
+    padding: 10px;
+  }
+  .employee-name {
+    font-size: 20px;
+  }
+  .grievance-detail-card {
+    padding: 20px;
   }
 }
